// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders while running 1`] = `
<div
  className="sc-dlfnuX bAUoMe"
>
  <div
    className="sc-eCstlR bdgGAz"
  >
    <span
      className="sc-jSgvzq"
    >
      0
    </span>
    <span
      className="sc-gKseQn kiMDZg"
    >
      42
    </span>
  </div>
  <button
    className="sc-bdfBQB sc-gsTEea gSdseo huREHC"
    onClick={[Function]}
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  className="sc-dlfnuX bAUoMe"
>
  <div
    className="sc-hKgJUU dzkuUE"
  >
    🛌🛌
  </div>
  <button
    className="sc-bdfBQB sc-gsTEea glojYb huREHC"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  className="sc-dlfnuX bAUoMe"
>
  <div
    className="sc-hKgJUU dzkuUE"
  >
    🍅
  </div>
  <button
    className="sc-bdfBQB sc-gsTEea glojYb huREHC"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  className="sc-dlfnuX bAUoMe"
>
  <div
    className="sc-hKgJUU dzkuUE"
  >
    🛌
  </div>
  <button
    className="sc-bdfBQB sc-gsTEea glojYb huREHC"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;
